--- a/ReactorHttp-Cpp.vcxproj
+++ b/ReactorHttp-Cpp.vcxproj
@@ -75,9 +75,19 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClCompile Include="Channel.cpp" />
+    <ClCompile Include="Dispatcher.cpp" />
+    <ClCompile Include="EpollDispatcher.cpp" />
+    <ClCompile Include="EventLoop.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="WorkerThread.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Channel.h" />
+    <ClInclude Include="Dispatcher.h" />
+    <ClInclude Include="EpollDispatcher.h" />
+    <ClInclude Include="EventLoop.h" />
+    <ClInclude Include="WorkerThread.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
